# LightTSDB

./: .gitignore  .travis.yml  CMakeLists.txt  LightTSDB - Example1.cbp  LightTSDB - Example2.cbp  LightTSDB - Example3.cbp  LightTSDB - RebuildIndex.cbp  LightTSDB - Server.cbp  LightTSDB.cbp  LightTSDB.mk  LightTSDB.workspace  README.md  appveyor.yml
Win/: LightTSDB.sln
Win/examples/: example1.vcxproj  example2.vcxproj  example3.vcxproj
Win/server/: LTSDBServer.vcxproj
Win/test/: unittest.vcxproj
builds/codeblocks/: LightTSDB - Example1.cbp  LightTSDB - Example2.cbp  LightTSDB - Example3.cbp  LightTSDB - RebuildIndex.cbp  LightTSDB - Server.cbp  LightTSDB.cbp  LightTSDB.workspace
builds/msvc/: LTSDBServer.vcxproj  LightTSDB.sln  example1.vcxproj  example2.vcxproj  example3.vcxproj  unittest.vcxproj
dependency/UnitTest/: UnitTest.cpp  UnitTest.h  termcolor.h
dependency/mongoose-cpp/: Request.cpp  Request.h  Server.h  WebSocket.h
doxygen/: doxyfile
examples/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp
server/: CMakeLists.txt  LastController.cpp  LastController.h  LtsdbFactory.cpp  LtsdbFactory.h  ReadController.cpp  ReadController.h  TimeHelper.cpp  TimeHelper.h  WelcomeController.cpp  WelcomeController.h  WriteController.cpp  WriteController.h  main.cpp
server/mongoose/: mongoose.c
src/: LightTSDB.cpp  LightTSDB.h  TimeMockable.h
test/: CMakeLists.txt  TestHourlyTimestamp.cpp  TestHourlyTimestamp.h  TestLightTSDB.cpp  TestLightTSDB.h  TestLtsdbFile.cpp  TestLtsdbFile.h  TestOtherTypes.cpp  TestOtherTypes.h  TestTools.cpp  TestTools.h  TimeMock.cpp  TimeMock.h  main.cpp
test/data/: CorruptDate.data  CorruptDate.index  LostData.data  LostData.index  LucileBedRoomTemperature.index  LucileBedRoomTemperatureWin.index  SignDataErr.data  StateIndexErr.index  TooNewDate.data  TooNewDate.index  TooNewDateWin.data  TooNewDateWin.index  TypeIndexErr.index  VersionDataErr.data
tools/: CMakeLists.txt  RebuildIndex.cpp  RebuildIndex.h  RebuildIndexMain.cpp
